--- a/HW12-webServer/src/main/resources/templates/clients.html
+++ b/HW12-webServer/src/main/resources/templates/clients.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <h4>Создать пользователя</h4>
+    <h4>Создать клиента</h4>
     <label>Имя <br/>
         <input type="text" id = "clientNameTextBox" placeholder="Введите имя клиента">
     </label>
